--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-    <h1>Simon warsss</h1>
+    <h1>Simon wars</h1>
 </body>
 </html>
