listenausgabe der Items. POST von Textbox.

--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -9,45 +9,44 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
-<!-- <textarea id="textarea"></textarea> -->
+<textarea id="myTextarea"></textarea>
 
 <button type="button" onclick="POST()">Post</button>
-<p>id:</p>
+<p>listId:</p>
 <div id="_id"></div>
 <p>userId:</p>
 <div id="userId"></div>
 <p>name:</p>
-<div id="name"></div>
+<div id="listname"></div>
 <p>items:</p>
-<div id="getitems"></div>
+<div id="items"></div>
 
 <script>
-    function POST() {
-        /*  var data = document.getElementById("myTextarea").value; */
+    var selectedListUrl = [];
 
+    /* POST Item von Textbox */
+
+    function POST() {
         var data = JSON.stringify({
-            "name": "Harampiza"
+            "name": document.getElementById("myTextarea").value
         });
         var xhr = new XMLHttpRequest();
         xhr.withCredentials = true;
-
         xhr.addEventListener("readystatechange", function () {
             if (this.readyState === this.DONE) {
                 console.log(this.responseText);
             }
         });
-
         xhr.open("POST", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6/items");
         xhr.setRequestHeader("content-type", "application/json");
         xhr.send(data);
     }
 
+    /* GET ListID */
 
     var data = null;
-
     var xhr = new XMLHttpRequest();
     xhr.withCredentials = true;
-
     xhr.addEventListener("readystatechange", function () {
         if (this.readyState === this.DONE) {
             var einkaufsliste = JSON.parse(this.responseText)
@@ -55,14 +54,13 @@
         }
     });
 
-    xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6?ddd=d&=");
+    /* GET userId */
+
+    xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6");
     xhr.send(data);
-
     var data = null;
-
     var xhr = new XMLHttpRequest();
     xhr.withCredentials = true;
-
     xhr.addEventListener("readystatechange", function () {
         if (this.readyState === this.DONE) {
             var einkaufsliste = JSON.parse(this.responseText)
@@ -70,44 +68,75 @@
         }
     });
 
-    xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6?ddd=d&=");
+    /*  GET Einkaufsliste Name */
+
+    xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6");
     xhr.send(data);
-
     var data = null;
-
     var xhr = new XMLHttpRequest();
     xhr.withCredentials = true;
-
     xhr.addEventListener("readystatechange", function () {
         if (this.readyState === this.DONE) {
             var einkaufsliste = JSON.parse(this.responseText)
-            document.getElementById("name").innerHTML = einkaufsliste.name;
+            document.getElementById("listname").innerHTML = einkaufsliste.name;
         }
     });
 
-    xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6?ddd=d&=");
+    /*  GET Einkaufslisten Items */
+
+    var data = null;
+    var xhr = new XMLHttpRequest();
+    xhr.withCredentials = true;
+    xhr.addEventListener("readystatechange", function () {
+        if (this.readyState === this.DONE) {
+            var einkaufsliste = JSON.parse(this.responseText)
+            text = "<ul>"
+            for (i = 0; i < Object.keys(einkaufsliste.items).length; i++) {
+                text += '<li>' + einkaufsliste.items[i].name + '</li>';
+            }
+            console.log(Object.keys(einkaufsliste.items).length);
+        }
+        text += '</ul>'
+        document.getElementById('items').innerHTML = text;
+    });
+    xhr.open("GET",
+        "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6?ddd=d&=");
     xhr.send(data);
 
-    var getitems = function (i) {
-        var data = null;
+    /*   DELETE Item von Liste */
 
+    /* function (selectedListUrl, itemId) {
+        var data = null;
         var xhr = new XMLHttpRequest();
         xhr.withCredentials = true;
-
         xhr.addEventListener("readystatechange", function () {
             if (this.readyState === this.DONE) {
-                var einkaufsliste = JSON.parse(this.responseText)
-                document.getElementById("items").innerHTML = einkaufsliste.items[1].name;
+                console.log(this.responseText);
             }
         });
+        xhr.open("DELETE",
+            "https://shopping-lists-api.herokuapp.com/api/v1/lists/" + selectedListUrl + "/items5" + itemId
+        );
+        xhr.send(data); */
 
-        xhr.open("GET", "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6?ddd=d&=");
-        xhr.send(data);
-    }
-    for (var i = 0; i < einkaufsliste.items.lenght; i++) {
-        getitems(i)
-    }
 
+    /* Update Item */
+
+    var data = JSON.stringify({
+        "bought": true
+    });
+    var xhr = new XMLHttpRequest();
+    xhr.withCredentials = true;
+    xhr.addEventListener("readystatechange", function () {
+        if (this.readyState === this.DONE) {
+            console.log(this.responseText);
+        }
+    });
+    xhr.open("PUT",
+        "https://shopping-lists-api.herokuapp.com/api/v1/lists/5d931300ac8b120017a74aa6/items/5d964f519ddf3600176d7bbc"
+    );
+    xhr.setRequestHeader("content-type", "application/json");
+    xhr.send(data);
 </script>
 </body>
 
