--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
+<script src="../js/script.js"></script>
 
 <textarea id="myTextarea"></textarea>
 
