--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -108,7 +108,7 @@
 
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary" type="button" onclick="POST()">Hinzufügen</button>
+                        <button class="btn btn-outline-secondary" id="item_hinzufügen_btn" type="button" onclick="POST()">Hinzufügen</button>
                     </div>
                     <input type="text" id="textarea" class="form-control" placeholder="Items" aria-label=""
                         aria-describedby="basic-addon1">
@@ -117,9 +117,35 @@
             </nav>
 
             <!--List-Items-->
-            <ul class="list-group list-group-flush" ><span id="items"></ul>
-
+            <ul class="list-group list-group-flush"><span id="items"></ul>
             <div class="line"></div>
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">KOKS
+                    <span id="btn_items">
+                        <span id="addbacktolist">
+                            <button class="btn btn-outline-secondary" id="btn_bought">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </span>
+                        <button class="btn btn-outline-secondary" id="btn_delite">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    </span>
+                </li>
+                <li class="list-group-item">Heroin/brüste
+                        <span id="btn_items">
+                            <span id="addbacktolist">
+                                <button class="btn btn-outline-secondary" id="btn_bought">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                            </span>
+                            <button class="btn btn-outline-secondary" id="btn_delite">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </span>
+                    </li>
+            </ul>
 
 
         </div>
