--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta name="description" content="Shopping is popping">
+    <meta name="autor" content="Jan Wardenga & Felix Flassak">
+    <meta name="kurs" content="WWI2018H">
     <title>Shopping-List</title>
 
     <!-- Bootstrap CSS CDN -->
@@ -108,7 +110,12 @@
 
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary" id="item_hinzufügen_btn" type="button" onclick="POST()">Hinzufügen</button>
+                        <span>
+                            <button class="btn btn-outline-secondary" id="item_hinzufügen_plus_btn" type="button"
+                                onclick="POST()"><i class="fas fa-plus-circle"></i></button>
+                            <button class="btn btn-outline-secondary" id="item_hinzufügen_btn" type="button"
+                                onclick="POST()">Hinzufügen</button>
+                        </span>
                     </div>
                     <input type="text" id="textarea" class="form-control" placeholder="Items" aria-label=""
                         aria-describedby="basic-addon1">
@@ -116,8 +123,10 @@
 
             </nav>
 
-            <!--List-Items-->
-            <ul class="list-group list-group-flush"><span id="items"></ul>
+            <!--#######################################
+            #              Listitems                  #
+            ########################################-->
+            <ul class="list-group list-group-flush" id="list_items_bought_false"><span id="items"></ul>
             <div class="line"></div>
 
             <ul class="list-group list-group-flush">
@@ -147,6 +156,12 @@
                     </li>
             </ul>
 
+               <!--Print-->
+               <div class="line" id="print_btn_div">
+                <button class="btn btn-outline-secondary" id="print_btn" onclick="drucken()">
+                    <i class="fas fa-print"></i>
+                </button>
+            </div>
 
         </div>
     </div>
