Update-funktion implementiert

--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -124,40 +124,13 @@
             </nav>
 
             <!--#######################################
-            #              Listitems                  #
-            ########################################-->
-            <ul class="list-group list-group-flush" id="list_items_bought_false"><span id="items"></ul>
+                #              Listitems                  #
+                ########################################-->
+            <ul class="list-group " id="list_items_bought_false"><span id="itemsUnbought"></ul>
             <div class="line"></div>
-
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">KOKS
-                    <span id="btn_items">
-                        <span id="addbacktolist">
-                            <button class="btn btn-outline-secondary" id="btn_bought">
-                                <i class="fas fa-plus"></i>
-                            </button>
-                        </span>
-                        <button class="btn btn-outline-secondary" id="btn_delite">
-                            <i class="fas fa-trash-alt"></i>
-                        </button>
-                    </span>
-                </li>
-                <li class="list-group-item">Heroin/brüste
-                        <span id="btn_items">
-                            <span id="addbacktolist">
-                                <button class="btn btn-outline-secondary" id="btn_bought">
-                                    <i class="fas fa-plus"></i>
-                                </button>
-                            </span>
-                            <button class="btn btn-outline-secondary" id="btn_delite">
-                                <i class="fas fa-trash-alt"></i>
-                            </button>
-                        </span>
-                    </li>
-            </ul>
-
-               <!--Print-->
-               <div class="line" id="print_btn_div">
+            <ul class="list-group" id="list_items_bought_true"><span id="itemsBought"></ul>
+            <!--Print-->
+            <div class="line" id="print_btn_div">
                 <button class="btn btn-outline-secondary" id="print_btn" onclick="drucken()">
                     <i class="fas fa-print"></i>
                 </button>
