Sytling, Scrollbar, ShareAPI

--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -139,6 +139,9 @@
                 <button class="btn btn-outline-secondary" id="behindert" onclick="bistdubehindert()">
                     <i class="fas fa-wheelchair"></i>
                 </button>
+                <button class="btn btn-outline-secondary" id="share" onclick="shareapi()">
+                    <i class="fas fa-share-alt"></i>
+                </button>
             </div>
 
         </div>
