Änderungen: -Update Funktion verbessert -Hover Effekt

--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -72,6 +72,7 @@
         </nav>
         <!--Bootstraps Modal neue Liste Hinzufügen-->
         <!-- Modal -->
+        
         <div class="modal fade" id="neue_liste_hinzufügen_modal" tabindex="-1" role="dialog"
             aria-labelledby="neue_liste_hinzufügen_modal" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -128,8 +129,10 @@
             <!--#######################################
                 #              Listitems                  #
                 ########################################-->
+                <h2>Zu erledigen</h2>
             <ul class="list-group " id="list_items_bought_false"><span id="itemsUnbought"></ul>
             <div class="line"></div>
+            <h2>Erledigt</h2>
             <ul class="list-group" id="list_items_bought_true"><span id="itemsBought"></ul>
             <!--Print-->
             <div class="line" id="print_btn_div">
