genaral bugfixes + other stuff ;)

--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -38,9 +38,35 @@
 </head>
 
 <body>
-
-
-    <div class="listcontent">
+    <div class="nolistidnoapikey">
+        <div class="nolistidnoapikey-sidebar-header">
+            <h3>Shopping-List</h3>
+        </div>
+        <div class="nolistidnoapikey_content">
+            <p>Du hast noch keine Liste Hinzugefügt</p>
+            <label for="recipient-name" class="col-form-label">Füge eine exestierende Liste mit der ListenID
+                hinzu:</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="alter_api_key_input" placeholder="ListID">
+                <button class="input-group-addon btn btn-outline-secondary" title="Copy ListID" onclick="XXXX">
+                    <i class="far fa-1.5x fa-copy"></i></button>
+            </div>
+            <label for="message-text" class="col-form-label">Oder füge alle deine Listen mit deinem API-Key
+                hinzu:</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="neuer_api_key_input" placeholder="API-Key">
+                <button class="input-group-addon btn btn-outline-secondary" title="Copy API-Key">
+                    <i class="far fa-1.5x fa-copy" onclick="neuer_api_key_input()"></i></button>
+            </div>
+            <p>Du hast noch keine Listen, oder API-Key? <br>
+                Melde dich <span id="herokuapplink"><a target="_blank"
+                        href="https://shopping-lists-api.herokuapp.com/register">hier</a></span> an und komme dann
+                wieder hierhin
+                zurück.</p>
+            <button type="button" class="btn btn-outline-secondary" id="weiter">Weiter</button>
+        </div>
+    </div>
+    <div class="listcontent" id="tets">
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
@@ -91,7 +117,8 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" onclick="neue_liste_hinzufügen()">Hinzufügen</button>
+                        <button type="button" class="btn btn-outline-secondary"
+                            onclick="neue_liste_hinzufügen()">Hinzufügen</button>
                     </div>
                 </div>
             </div>
