--- a/html/shopping-list.html
+++ b/html/shopping-list.html
@@ -53,9 +53,9 @@
                                 id="quantity"></span></span> </a>
                 </li>
 
-                <li>
+                <!-- <li>
                     <a href="#">Schuhe <span class="badge badge-primary badge-pill">17</span></a>
-                </li>
+                </li> -->
             </ul>
             <ul class="list-unstyled neue_liste_hinzufügen">
 
@@ -163,10 +163,10 @@
             <!--#######################################
                 #              Listitems                  #
                 ########################################-->
-                <h2>Zu erledigen</h2>
+                <h2>Zu erledigen:</h2>
             <ul class="list-group " id="list_items_bought_false"><span id="itemsUnbought"></ul>
             <div class="line"></div>
-            <h2>Erledigt</h2>
+            <h2>Erledigt:</h2>
             <ul class="list-group" id="list_items_bought_true"><span id="itemsBought"></ul>
             <!--Print-->
             <div class="line" id="print_btn_div">
